Wed Jul  2 18:16:19 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (date2time_str): fix the overflow in
	  some situation. [ruby-bugs-20793]

Tue Jul  1 15:11:14 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_fill): check if beg is too big.

Mon Jun 30 20:35:32 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_buf_cat): check for self concatenation.

Sun Jun 29 21:39:54 2008  Tanaka Akira  <akr@fsij.org>

	* eval.c (rb_obj_respond_to): use RTEST to test the result of
	  respond_to? method.

Sun Jun 29 21:20:17 2008  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* array.c (rb_ary_fill): (compatibility) do not raise
	  ArgumentError on negative length.  This behaviour shall change
	  in a future release.

Sun Jun 29 20:08:11 2008  Tanaka Akira  <akr@fsij.org>

	* time.c (time_timeval): fix rounding negative float.

Sun Jun 29 19:19:08 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/inlinetest.rb (InlineTest.in_progname): workaround for frozen
	  $0.  [ruby-dev:35261]

	* lib/test/unit/ui/console/testrunner.rb (TestRunner#finished): ditto.

Sun Jun 29 19:19:08 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (set_arg0, ruby_prog_init): freeze $0.  a patch from Keita
	  Yamaguchi <keita.yamaguchi at gmail.com>.

Sun Jun 29 18:33:33 2008  Tanaka Akira  <akr@fsij.org>

	* process.c: include sys/resource.h if HAVE_SYS_RESOURCE_H is defined.
	  pointed by TOYOFUKU Chikanobu.  [ruby-dev:35258]

Sun Jun 29 18:26:01 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* variable.c (rb_f_trace_var): should not be allowed at safe level 4.  
	  a patch from Keita Yamaguchi <keita.yamaguchi at gmail.com>.

	* eval.c (rb_call0): wrong condition to check insecure method.
	  a patch from Keita Yamaguchi <keita.yamaguchi at gmail.com>.

Sun Jun 29 18:22:52 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_fill): not depend on unspecified behavior at integer