@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2008-07-02"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20080702
-#define RUBY_PATCHLEVEL 41
+#define RUBY_PATCHLEVEL 42
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
